fixed footer and adjusted card size to test on mobile

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body{
 }
 
 input[type=text] {
+  position: absolute;
+  right:0;
   width: 180px;
   float: right;
   margin-top: -100px;
@@ -36,6 +38,9 @@ input[type=text]:focus {
     position: relative;
     width:25%;
     margin-top:-30px;
+    clear: both;
+    display: block;
+
   }
 
 h1{
@@ -150,22 +155,18 @@ h4{
   height: 300px;
 
 }
-.all_cards{
-  margin-left: -20px;
-  margin-right: 0px
-}
+
  .wrap{
-   width: auto;
-   margin: auto;
    text-align: center;
  }
 
 
  .card{
+   display: inline-block;
    text-align: center;
    width: 410px;
    float: left;
-   margin: 24px;
+   margin: 32px;
    border-style: ridge;
    border-radius: 5px;
    margin-bottom: 100px;
@@ -213,6 +214,9 @@ h4{
 }
 
 .nav_menu{
+  top: 0;
+  right:0;
+  position: absolute;
   float: right;
 }
 
@@ -289,7 +293,7 @@ h4{
     position: relative;
     width: 100%;
     height: 50vh;
-    top: 50px;
+    top: 0px;
     left: 0;
     transition: 0.5s;
    }
@@ -304,12 +308,13 @@ h4{
    }
 
 
-
     .menu_icon{
     display: block;
+    top: -10px;
   }
 
     input[type=text]{
+    top:126px;
     width: 0px;
     margin-top: -10px;
 
@@ -319,10 +324,10 @@ h4{
     width: 30%;
   }
     .card {
-    width: 350px;
+    width: 400px;
   }
     .card img{
-    width: 340px
+    width: 390px
   }
     .CDUlogo{
     width: 50%;
@@ -341,3 +346,13 @@ h4{
     text-align: center;
     margin-bottom: -300px;
   }
+  .social-link li{
+    list-style: none;
+    margin: 10px 10px;
+    display: inline-block;
+    padding:0;
+  }
+  .footer-desc{
+    font-size: 10px;
+  }
+}
